Added date to copyright footter

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </article>
 
   <footer>
-    &copy; <span>Meg Ducharme</span>
+    &copy; <span>2016 Meg Ducharme</span>
   </footer>
 </body>
 </html>
