Added basic styling to sections

--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html>
 <head>
   <title>My Wicked Ahwsome Blog</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
   <header>
     <h1>Kao Jai Coffee</h1>
   </header>
-    <article>
+    <article id="article1">
       <header>
         <h2>How are coffee beans processed?</h2>
       </header>
        <img src="http://static1.squarespace.com/static/529f3a60e4b00096a05dd069/t/5362d97ae4b0c6561be3662e/1393759087630/Kao+Jai+Coffee?format=750w">
-       <section>
+       <section class="red_outline">
        <!-- this section is about coffee beans -->
          <h3>Coffee Beans are not Beans at All!</h3>
            <p>Did you know coffee beans are not actually beans at all? They are actually the seeds of a fruit, the coffee cherry. Farmers harvest the cherries by hand during the harvest season which last from November until about February in Thailand.</p>
        </section>
-       <section>
+       <section class="red_outline">
        <!-- this section is about coffee -->
          <h3>Harvesting Coffee Cherries</h3>
            <p>Our farmers hand select (literally) the ripe coffee cherries to ensure the highest quality possible. This selection process is the most time consuming and labor intensive step in the process of coffee bean production. Once picked, our coffee is naturally "wet processed" by soaking the cherries in water during three different stages. Between each stage, imperfect beans are removed to ensure only the highest quality beans make it into your cup.</p>
        </section>
-       <section>
+       <section class="red_outline">
        <!-- this section is about coffee processing -->
          <h3>Processing Coffee</h3>
            <p>After the coffee has naturally dried for 7-10 days in the sun, the coffee beans are hand sorted to separate the imperfect from the perfect beans. Women from the local hill tribe work together to make sure that only the perfect Arabica beans are used to make your cup of specialty Kao Jai Coffee. One of the most important aspect of Kao Jai Coffee is the farming families that we directly buy our coffee from. These families, living in the Doi Chang Valley, work day in and day out to provide the highest quality specialty coffee beans without negatively impacting our environment.</p>
@@ -34,12 +35,12 @@
       </footer>
     </article>
 
-    <article>
+    <article id="article2">
       <header>
         <h2>What does your label mean?</h2>
       </header>
           <img src="http://static1.squarespace.com/static/529f3a60e4b00096a05dd069/t/5458ed1ce4b06f5c9cfaba1e/1415114021840/Kao+Jai+Thai+Coffee?format=500w">
-      <section>
+      <section class="red_outline">
       <!-- this is about the label on the bag of coffee -->
         <h3>It means this:</h3>
           <p>
@@ -54,11 +55,11 @@
           </ol>
         </p>
       </section>
-      <section>
+      <section class="red_outline">
         <h3>Awesome Sauce!</h3>
           <p>Bacon ipsum dolor amet andouille brisket doner, prosciutto strip steak short ribs tenderloin boudin swine kevin pork chop. Pork turducken chuck, short ribs picanha cupim venison salami. Cupim beef ribs t-bone, short loin ball tip flank frankfurter ribeye tenderloin ham hock cow pork belly pastrami. Kielbasa landjaeger beef, tenderloin biltong turducken flank shank frankfurter shankle strip steak.</p>
       </section>
-      <section>
+      <section class="red_outline">
         <h3>Cool Beans!</h3>
           <p>Bacon ipsum dolor amet andouille brisket doner, prosciutto strip steak short ribs tenderloin boudin swine kevin pork chop. Pork turducken chuck, short ribs picanha cupim venison salami. Cupim beef ribs t-bone, short loin ball tip flank frankfurter ribeye tenderloin ham hock cow pork belly pastrami. Kielbasa landjaeger beef, tenderloin biltong turducken flank shank frankfurter shankle strip steak.</p>
       </section>
@@ -69,11 +70,11 @@
      </footer>
     </article>
 
-    <article>
+    <article id="article3">
       <header>
       <h2>Co-Founder: Meg Ducharme</h2>
       </header>
-        <section>
+        <section class="red_outline">
           <img src="http://static1.squarespace.com/static/529f3a60e4b00096a05dd069/t/56e07c7ef85082419cb3778d/1457552560863/Kao+Jai+Coffee?format=750w" alt="Photo of Meg Ducharme">
           <h3>The First Sip</h3>
             <p>Meg and her husband, Kyle, founded Kao Jai Coffee while teaching in Thailand. The story started while planning lessons at a local coffee shop when the waiter told them at the coffee they were drinking was from a local mountain.</p>
