Added weird styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </header>
     <article id="article1">
       <header>
-        <h2>How are coffee beans processed?</h2>
+        <h2>
+        <marquee>How are coffee beans processed?</marquee> 
+        </h2>
       </header>
        <img src="http://static1.squarespace.com/static/529f3a60e4b00096a05dd069/t/5362d97ae4b0c6561be3662e/1393759087630/Kao+Jai+Coffee?format=750w">
        <section class="red_outline">
